Lab1 Finished gui and encoding decoding logics